
WIP      Improve AML wiki in Github and move documentation from Kodi forum to Github wiki.

WIP      Check out the ListItem constructor offscreen parameter in Leia. It can dramatically speed
         up ListItem creation and population.
         See https://forum.kodi.tv/showthread.php?tid=329315&pid=2711937#pid2711937
         and https://forum.kodi.tv/showthread.php?tid=307394&pid=2531524

WIP      Implement "Most played MAME machines"

WIP      Implement "Recently played MAME machines"

WIP      Implement "Most played SL ROMs"

WIP      Implement "Recently played SL ROMs"


[B]Advanced Emulator Launcher | version 0.9.5 | xx May 2018[/B]

WIP      Improve PDF manual rendering. Use the library pdfrw for image extraction.

FEATURE  Clean ROM cache before rebuilding cache.

FEATURE  Clean asset cache before rebuilding cache.

FEATURE  Clean filters directory before rebuilding custom filters.

FEATURE  MAME audit statistics.

FEATURE  SL audit statistics.

FEATURE  Support for SL Merged ROM/CHD sets (currently only Split).

FEATURE  Added audit timestamps (MAME machines and Software Lists).

FEATURE  Move driver aristmk5.cpp (Aristocrat gambling machines) from Standard to Unusual.
         Also, adp.cpp, mpu4vid.cpp, cubo.cpp, sfbonus.cpp, peplus.cpp.

FIX      Software List ROM size was stored as string and not as int. This made the SL Audit to
         completely fail.

FIX      Fixed audit of MAME machine ROMs (wrong function name).


[B]Advanced Emulator Launcher | version 0.9.4 | 29 March 2018[/B]

FEATURE  File cache for SL ROMs/CHDs and SL assets.

FEATURE  Port the file scanner cache from AEL to AML. This will increase the scanning speed a lot!
         Also, this will allow supporting more image types (currently only PNG), manual
         types (currently only PDF) and trailer types (currently MP4 only).

FEATURE  Create an AEL virtual launcher in XML from any AML filter.

FEATURE  Use proper Software List name in "Machines by Software List" filter.
